Wrap images for recipes on index.html page, fix salmon-pilaf format page
salmon-pilaf commit didn't work properly? might have forgot to save the
file before committing. this commit implements that changes to the
formatting that i implemented in that commit. the index.html page also
had a format change that wraps flex items if there isn't enough space
on the page.

--- a/styles.css
+++ b/styles.css
@@ -48,5 +48,5 @@ a:hover{
 
 .gallery{
     display: flex;
-
+    flex-wrap: wrap;
 }
